<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cnb_unselectedColor="#666666"
    >
    <item
        android:id="@+id/spring"
        android:title="@string/spring"
        android:icon="@drawable/ic_baseline_hotel_24"
        app:cnb_iconColor="@color/purple_200"/>
    <item
        android:id="@+id/summer"
        android:title="@string/summer"
        android:icon="@drawable/ic_baseline_hotel_24"
        app:cnb_iconColor="@color/purple_500"/>
    <item
        android:id="@+id/autmun"
        android:title="@string/autmun"
        android:icon="@drawable/ic_baseline_hotel_24"
        app:cnb_iconColor="@color/teal_200"/>
    <item
        android:id="@+id/winter"
        android:title="@string/winter"
        android:icon="@drawable/ic_baseline_hotel_24"
        app:cnb_iconColor="@color/colorAccent"/>


</menu>