<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginAndRegisterFragment.RegisterFragment">

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".2"
        app:layout_constraintHorizontal_bias=".5"
        android:paddingStart="15dp"
        android:hint="@string/email"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/mobile_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number"
        android:paddingTop="10dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="15dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".8"
        android:paddingStart="15dp"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:paddingTop="10dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="15dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mobile_num"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".8"
        android:paddingStart="15dp"/>
    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:paddingTop="10dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="15dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".8"
        android:paddingStart="15dp"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintVertical_bias=".7"
        android:textSize="20sp"
        android:text="@string/signup"/>








</androidx.constraintlayout.widget.ConstraintLayout>