<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginAndRegisterFragment.LoginFragment">

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".3"
        app:layout_constraintHorizontal_bias=".5"
        android:hint="@string/email"
        android:background="@drawable/custopm_input"
        android:drawableStart="@drawable/custopm_email_icon"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:drawablePadding="12dp"
        tools:ignore="RtlSymmetry" />
    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias=".5"
        android:hint="@string/password"
        android:drawablePadding="12dp"
        android:drawableStart="@drawable/custom_lock_icon"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:background="@drawable/custopm_input"
        android:paddingBottom="15dp"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".9"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        app:cornerRadius="20dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout >